@@ -43,6 +43,7 @@ easier to use. The changes are:
 - XMV demuxer
 - Windows Media Image decoder
 - C++ Support
+- H.264 Decoding on Android via Stagefright
 
 
 version 0.7:
